Второй урок + ДЗ2

--- a/catalog/product1.html
+++ b/catalog/product1.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <title>Мой первый сайт</title>
+    <title>Вечернее платье</title>
 </head>
+
 <body>
     <h1>Вечернее платье</h1>
-    <a href="../index.html">Вернуться на Главную</a>
+    <ul class="menu">
+        <li><a href="../index.html">Главная</a></li>
+        <li><a href="../catalog.html">Каталог</a></li>
+        <li><a href="../contacts.html">Контакты</a></li>
+    </ul>
+    <hr>
     <h3>Описание товара</h3>
-    <img style="width: 330px;" src="../img/dress1.jpg" alt="Платье">
+    <a href="../img/dress1.jpg" target="_blank"><img style="width: 330px;" src="../img/dress1.jpg" alt="Вечернее платье"></a>
     <p>Женское вечернее платье</p>
     <h3>Характеристики товара</h3>
-    <p>Платье с блестками вечернее в пол</p>
+    <ul>
+        <li>цвет: красное</li>
+        <li>тип: вечернее</li>
+        <li>длина: в пол</li>
+        <li>с блестками</li>
+    </ul>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure esse molestias ea soluta officiis at, nesciunt nemo maiores consequatur quaerat repellat dolor voluptatem quas quasi accusamus neque eaque sint consectetur!</p>
-    <a href="https://geekbrains.ru/" target="_blank">Geekbrains</a>
     <hr>
-    <p>Все права защищены</p>
+    <p>Все права защищены &copy;</p>
 </body>
+
 </html>
