--- a/catalog/product3.html
+++ b/catalog/product3.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <title>Мой первый сайт</title>
+    <title>Винтажное платье</title>
 </head>
+
 <body>
     <h1>Винтажное платье</h1>
-    <a href="../index.html">Вернуться на Главную</a>
+    <ul class="menu">
+        <li><a href="../index.html">Главная</a></li>
+        <li><a href="../catalog/product1.html">Вечернее платье</a></li>
+        <li><a href="../catalog/product3.html">Винтажное платье</a></li>
+        <li><a href="../contacts.html">Контакты</a></li>
+    </ul>
+    <hr>
     <h3>Описание товара</h3>
-    <img style="width: 330px; "src="../img/dress3.jpg" alt="Платье">
+    <a href="../img/dress3.jpg" target="_blank"><img style="width: 330px;" src="../img/dress3.jpg" alt="Винтажное платье"></a>
     <p>Женское винтажное платье без рукавов</p>
     <h3>Характеристики товара</h3>
-    <p>Платье винтажное без рукавов из полиэстера с принтом, модель 1950</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure esse molestias ea soluta officiis at, nesciunt nemo maiores consequatur quaerat repellat dolor voluptatem quas quasi accusamus neque eaque sint consectetur!</p>
+    <ul>
+       <li>с&nbsp;принтом</li>
+       <li>из&nbsp;полиэстера</li>
+       <li>длина до колен</li>
+       <li>без рукавов</li>
+       <li>модель 1950-х</li>
+    </ul>
+    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure esse molestias ea&nbsp;soluta officiis&nbsp;at, nesciunt nemo maiores consequatur quaerat repellat dolor voluptatem quas quasi accusamus neque eaque sint consectetur!</p> -->
     <hr>
-    <p>Все права защищены</p>
+    <p>Все права защищены&nbsp;&copy;</p>
 </body>
+
 </html>
