--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <title>Главная страница</title>
 </head>
+
 <body>
     <h1>Главная</h1>
-    <a href="contacts.html">Перейти в контакты</a><br>
-    <a href="catalog/product1.html">Вечернее платье</a><br>
-    <a href="catalog/product2.html">Вечернее платье без бретелей</a><br>
-    <a href="catalog/product3.html">Винтажное платье</a><br>
+    <ul class="menu">
+        <li><a href="#">Главная</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+    </ul>
+    <hr>
+    <h2>Леди</h2>
+    <p>Добро пожаловать на сайт лучших платьев!</p>
+    <hr>
+    <p>Все права защищены &copy;</p>
 </body>
+
 </html>
