--- a/contacts.html
+++ b/contacts.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <title>Контакты</title>
 </head>
+
 <body>
     <h1>Контакты</h1>
+    <ul class="menu">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+    </ul>
+    <hr>
+    <h3>Напишите нам</h3>
+    <form action="#">
+        Ваше имя <input type="text" placeholder="Ваше имя"><br>
+        Ваш e-mail <input type="text" placeholder="Укажите e-mail"><br>
+        Ваш телефон* <input type="text" placeholder="по желанию"><br>
+        Тема обращения <br>
+        Вопрос <input type="radio" name="theme" checked>
+        Доставка <input type="radio" name="theme"><br>
+        Ваше сообщение <input type="text" placeholder="не более 520 символов"><br>
+        <input type="submit" value="Отправить данные">
+        <input type="reset" value="Очистить">
+    </form>
+    <h3>Адрес</h3>
+    <p>Телефон: +1 000 100 90 90</p>
+    <p>Адрес: г. Санкт-Петербург, пр. Лиговский, д. 30, ТРЦ "Галерея", 6 этаж</p>
+    <p>e-mail: lady@bla-bla-bla.ru</p>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A3b668c0c755eb43228dc03578bd066d4c1ba9c3064eaac4216b4abfe05b409a7&amp;width=550&amp;height=500&amp;lang=ru_RU&amp;scroll=true"></script>
+    <hr>
+    <p>Все права защищены &copy;</p>
 </body>
+
 </html>
