--- a/index.html
+++ b/index.html
@@ -4,20 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Главная страница</title>
+    <link rel="stylesheet" href="style/style.css" type="text/css">
 </head>
 
 <body>
-    <h1>Главная</h1>
-    <ul class="menu">
-        <li><a href="#">Главная</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-    </ul>
-    <hr>
-    <h2>Леди</h2>
-    <p>Добро пожаловать на сайт лучших платьев!</p>
-    <hr>
-    <p>Все права защищены &copy;</p>
+    <div class="container">
+        <div class="header">
+            <img class="logo" src="img/logo.jpg" alt="Интернет-магазин «Леди»">
+            <div class="wrapper">
+                <h1>Главная</h1>
+                <ul class="menu">
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="catalog.html">Каталог</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <div>
+            <h2>Леди</h2>
+            <p>Добро пожаловать на&nbsp;сайт лучших платьев!</p>
+        </div>
+        <hr>
+    </div>
+    <div class="footer">
+        <div class="container">
+            Все права защищены &copy;
+        </div>
+    </div>
 </body>
 
 </html>
