--- a/catalog.html
+++ b/catalog.html
@@ -4,22 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Каталог</title>
+    <link rel="stylesheet" href="style/style.css" type="text/css">
 </head>
 
 <body>
-    <ul class="menu">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-    </ul>
-    <hr>
-    <h1>Каталог</h1>
-    <img style="width: 180px;" src="img/dress1.jpg" alt="Вечернее платье"><br>
-    <a href="catalog/product1.html">Вечернее платье</a><br>
-    <img style="width: 230px; " src="img/dress3.jpg" alt="Винтажное платье"><br>
-    <a href="catalog/product3.html">Винтажное платье</a><br>
-    <hr>
-    <p>Все права защищены &copy;</p>
+    <div class="container">
+        <div class="header">
+            <img class="logo" src="img/logo.jpg" alt="Интернет-магазин «Леди»">
+            <div class="wrapper">
+                <h1>Каталог</h1>
+                <ul class="menu">
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="catalog.html">Каталог</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <div class="products">
+            <div class="product">
+                <img style="width: 180px;" src="img/dress1.jpg" alt="Вечернее платье"><br>
+                <a href="catalog/product1.html">Вечернее платье</a>
+            </div>
+            <div class="product">
+                <img style="width: 270px; " src="img/dress3.jpg" alt="Винтажное платье"><br>
+                <a href="catalog/product3.html">Винтажное платье</a>
+            </div>
+        </div>
+        <hr>
+    </div>
+    <div class="footer">
+        <div class="container">
+            Все права защищены &copy;
+        </div>
+    </div>
 </body>
 
 </html>
