Урок 7 + ДЗ. Верстка с макета

--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style-main.css">
     <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-exclusive.css">
+    <link rel="stylesheet" href="styles/slider.css">
+    <link rel="stylesheet" href="styles/footer.css">
 </head>
 
 <body>
     <div class="container">
-        <div class="slider">
+        <div class="slider slider--wide">
             <div class="header clearfix">
                 <a href="#"><img src="img/logo.png" alt="logo"></a>
                 <ul class="menu clearfix">
@@ -19,12 +22,12 @@
                     <li class="menu__item"><a href="#" class="menu__item-link">PRODUCTS</a></li>
                     <li class="menu__item"><a href="#" class="menu__item-link">HISTORY</a></li>
                     <li class="menu__item"><a href="#" class="menu__item-link">SHOWROOM</a></li>
-                    <li class="menu__item"><a href="#" class="menu__item-link">CONTACT</a></li>
+                    <li class="menu__item"><a href="contact.html" class="menu__item-link">CONTACT</a></li>
                     <li class="menu__item"><a href="#" class="menu__item-link"><img src="img/search.png" alt="search"></a></li>
                 </ul>
             </div>
             <div class="slider__content">
-                <p class="slider__trending">TRENDING</p>
+                <p class="slider__subtitle slider__subtitle--trending">TRENDING</p>
                 <h2 class="slider__title">Fishnet Chair</h2>
                 <p class="slider__text">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p>
                 <a href="#" class="slider__button">Order Us</a>
@@ -57,6 +60,150 @@
                 <div class="product">
                     <img src="img/product-4.jpg" alt="product-4" class="product__img">
                 </div>
+            </div>
+        </div>
+        <div class="exclusives">
+            <div class="exclusive-item">
+                <div class="slider slider--red">
+                    <div class="slider__content">
+                        <p class="slider__subtitle slider__subtitle--exclusive">exclusive</p>
+                        <h2 class="slider__title">Fishnet Chair</h2>
+                        <p class="slider__text">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p>
+                        <a href="#" class="slider__button">Order Us</a>
+                    </div>
+                </div>
+            </div>
+            <div class="exclusive-item">
+                <div class="slider slider--brown">
+                    <div class="slider__content">
+                        <p class="slider__subtitle slider__subtitle--exclusive">exclusive</p>
+                        <h2 class="slider__title">Fishnet Chair</h2>
+                        <p class="slider__text">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p>
+                        <a href="#" class="slider__button">Order Us</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="products">
+            <div class="products__header">
+                <h2 class="products__title">Trending Products</h2>
+                <a href="#" class="products__catalog">explore all</a>
+            </div>
+            <div class="products__list product__list--exclusives">
+                <div class="product">
+                    <img src="img/product-5.jpg" alt="product-5" class="product__img">
+                </div>
+                <div class="product">
+                    <img src="img/product-6.jpg" alt="product-6" class="product__img">
+                </div>
+                <div class="product">
+                    <img src="img/product-7.jpg" alt="product-7" class="product__img">
+                </div>
+                <div class="product">
+                    <img src="img/product-8.jpg" alt="product-8" class="product__img">
+                </div>
+                <div class="product">
+                    <img src="img/product-9.jpg" alt="product-9" class="product__img">
+                </div>
+                <div class="product">
+                    <img src="img/product-10.jpg" alt="product-10" class="product__img">
+                </div>
+            </div>
+        </div>
+        <div class="slider slider--wide slider--hot">
+            <div class="slider__content">
+                <p class="slider__subtitle slider__subtitle--hot-deal">Hot deal</p>
+                <h2 class="slider__title">Fishnet Chair</h2>
+                <p class="slider__text">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p>
+                <a href="#" class="slider__button">Order Us</a>
+            </div>
+            <div class="slider__dots">
+                <a href="#" class="slider__circle"></a><a href="#" class="slider__circle slider__circle--active"></a><a href="#" class="slider__circle"></a>
+            </div>
+        </div>
+        <div class="exclusive-2">
+            <div class="exclusive-2-item">
+                <div class="slider slider--pillow">
+                    <div class="slider__content">
+                        <p class="slider__subtitle slider__subtitle--exclusive">exclusive</p>
+                        <h2 class="slider__title">Fishnet Chair</h2>
+                        <p class="slider__text">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p>
+                        <a href="#" class="slider__button">Order Us</a>
+                    </div>
+                </div>
+            </div>
+            <div class="exclusive-2-item">
+                <div class="products__list">
+                    <div class="product">
+                        <img src="img/product-2-sm.jpg" alt="product-2" class="product__img">
+                    </div>
+                    <div class="product">
+                        <img src="img/product-3-sm.jpg" alt="product-3" class="product__img">
+                    </div>
+                    <div class="product">
+                        <img src="img/product-4-sm.jpg" alt="product-4" class="product__img">
+                    </div>
+                    <div class="product">
+                        <img src="img/product-5-sm.jpg" alt="product-4" class="product__img">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="slider slider--wide slider--app">
+            <div class="slider__content">
+                <p class="slider__subtitle slider__subtitle--mobile-app">mobile app</p>
+                <h2 class="slider__title">Find. Follow. Favorite.</h2>
+                <p class="slider__text">Save your favorites and share your style.</p>
+                <a href="#" class="slider__store">
+                    <img src="img/app-store.png" alt="app-store">
+                </a>
+                <a href="#" class="slider__store">
+                    <img src="img/google-play.png" alt="google-play">
+                </a>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="footer__contact">
+                <h3>Contact Us</h3>
+                <p>132A Bridge Road Richmond VIC Australia.</p>
+                <p>Talk to us on 1300 132 info@interior.com</p>
+            </div>
+            <div class="footer__information">
+                <h3>Useful Information</h3>
+                <ul class="footer__info">
+                    <li><a href="#">Sales terms</a></li>
+                    <li><a href="#">Architect accounts</a></li>
+                    <li><a href="#">Customer care</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Delivery</a></li>
+                    <li><a href="#">Exchanges & returns</a></li>
+                </ul>
+            </div>
+            <div class="footer__in-touch">
+                <h3>Let’s Stay in Touch!</h3>
+                <p>Suscribe to know about our latest news, products and special offers just for suscribers.</p>
+                <form action="#" class="mail">
+                    <input type="text" placeholder="your email address">
+                    <button></button>
+                </form>
+            </div>
+            <div class="footer__copyright">
+                <p>&copy;Copyright - INTERIOR 2016. All Rights Reserved.</p>
+                <div class="footer__social-links">
+                    <a href="#">
+                        <img src="img/social-links-facebook.png" alt="facebook">
+                    </a>
+                    <a href="#">
+                        <img src="img/social-links-twitter.png" alt="twitter">
+                    </a>
+                    <a href="#">
+                        <img src="img/social-links-googleplus.png" alt="googleplus">
+                    </a>
+                    <a href="#">
+                        <img src="img/social-links-pinterest.png" alt="pinterest">
+                    </a>
+                </div>
+                <p>Terms & Conditions / Privacy policy & Cookies</p>
             </div>
         </div>
     </div>
